@@ -15,6 +15,8 @@ Release 1.5.0
 * Removed deprecated pam_tally and pam_tally2 modules, use pam_faillock instead.
 * pam_env: Reading of the user environment is deprecated and will be removed
 	   at some point in the future.
+* libpam: pam_modutil_drop_priv() now correctly sets the target user's
+          supplementary groups, allowing pam_motd to filter messages accordingly
 
 Release 1.4.0
 * Multiple minor bug fixes and documentation improvements
